tests/lines/test_missing_slice.fail.rs
use lit_mod::lines;

fn main() {
    let s = lines!("Hello, world!");
}